--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -1,6 +1,25 @@
 {
   "cells": [
     {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
+      "source": [
+        "%load_ext autoreload\n",
+        "%autoreload 2"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -24,12 +43,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Import Required Libraries"
+        "### Import Required Libraries"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -47,41 +66,117 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Preview the ratings data"
+        "### Preview the ratings data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>userId</th>\n",
+              "      <th>movieId</th>\n",
+              "      <th>rating</th>\n",
+              "      <th>timestamp</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>31</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>1260759144</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1029</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1260759179</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1061</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1260759182</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   userId  movieId  rating   timestamp\n",
+              "0       1       31     2.5  1260759144\n",
+              "1       1     1029     3.0  1260759179\n",
+              "2       1     1061     3.0  1260759182"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "data_types = { 'userId': np.int32, 'movieId': np.int32, 'rating': np.float32, 'timestamp': np.int32 }\n",
         "ratings_df = pd.read_csv('../../src/recsys/data/ratings.csv', dtype=data_types)\n",
         "\n",
-        "ratings_df.head(5)"
+        "ratings_df.head(3)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Load and Prepare Data"
+        "### Load and Prepare Data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<surprise.prediction_algorithms.knns.KNNBaseline at 0x12f103140>"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Initialize MovieLens data loader & load data\n",
         "ml, data, rankings  = MovieLens.load()\n",
         "\n",
-        "# Computing item similarities so we can measure diversity later\n",
+        "# Generate item similarities so we can measure diversity later\n",
         "full_train_set = data.build_full_trainset()\n",
         "knn_options = {'name': 'pearson_baseline', 'user_based': False}\n",
-        "similarities_model = KNNBaseline(sim_options=knn_options)\n",
+        "similarities_model = KNNBaseline(sim_options=knn_options, verbose=False)\n",
         "similarities_model.fit(full_train_set)"
       ]
     },
@@ -89,18 +184,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Train-Test Split and Model Training"
+        "### Train-Test Split and Model Training"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
         "train_set, test_set = train_test_split(data, test_size=.25, random_state=1)\n",
         "\n",
-        "algo = SVD(random_state=10)\n",
+        "algo = SVD(random_state=10, verbose=False)\n",
         "algo.fit(train_set)\n",
         "\n",
         "predictions = algo.test(test_set)"
@@ -110,96 +205,130 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Model Accuracy"
+        "### Evaluate Model Accuracy"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "RMSE: 0.9033701087151802\n",
+            "MAE: 0.6977882196132263\n"
+          ]
+        }
+      ],
       "source": [
-        "print(\"RMSE: \", RecommenderMetrics.rmse(predictions))\n",
-        "print(\"MAE: \", RecommenderMetrics.mae(predictions))"
+        "print(f\"RMSE: {RecommenderMetrics.rmse(predictions)}\")\n",
+        "print(f\"MAE: {RecommenderMetrics.mae(predictions)}\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Top-10 Recommendations using Leave-One-Out Cross Validation"
+        "### Evaluate Top-N Recommendations using Leave-One-Out Cross Validation"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hit Rate: 0.02981\n",
+            "rHR (Hit Rate by rating value):\n",
+            "\t3.5: 0.01724\n",
+            "\t4.0: 0.04255\n",
+            "\t4.5: 0.02083\n",
+            "\t5.0: 0.06803\n",
+            "cHR (Cumulative Hit Rate, rating >= 4): 0.04961\n",
+            "ARHR (Average Reciprocal Hit Rank): 0.01116\n"
+          ]
+        }
+      ],
       "source": [
         "# Set aside one rating per user for testing\n",
         "loo_iterator = LeaveOneOut(n_splits=1, random_state=1)\n",
         "\n",
         "for train_set, test_set in loo_iterator.split(data):\n",
-        "    print(\"Computing recommendations with leave-one-out...\")\n",
-        "\n",
         "    # Train model without left-out ratings\n",
         "    algo.fit(train_set)\n",
         "\n",
         "    # Predicts ratings for left-out ratings only\n",
-        "    print(\"Predict ratings for left-out set...\")\n",
-        "    loo_validation_set = algo.test(test_set)\n",
+        "    loo_predictions = algo.test(test_set)\n",
         "\n",
-        "    # Build predictions for all ratings not in the training set\n",
-        "    print(\"Predict all missing ratings...\")\n",
+        "    # Create predictions for all ratings not in the training set\n",
         "    anti_test_set = train_set.build_anti_testset()\n",
-        "    all_preds = algo.test(anti_test_set)\n",
+        "    all_predictions = algo.test(anti_test_set)\n",
         "\n",
-        "    # Compute top 10 recs for each user\n",
-        "    print(\"Compute top 10 recs per user...\")\n",
-        "    top_n_preds = RecommenderMetrics.get_top_n(all_preds, n=10)\n",
-        "\n",
-        "    # See how often we recommended a movie the user actually rated\n",
-        "    print(\"\\nHit Rate: \", RecommenderMetrics.hit_rate(top_n_preds, loo_validation_set))\n",
-        "\n",
-        "    # Break down hit rate by rating value\n",
-        "    print(\"\\nrHR (Hit Rate by Rating value): \")\n",
-        "    RecommenderMetrics.rating_hit_rate(top_n_preds, loo_validation_set)\n",
-        "\n",
-        "    # See how often we recommended a movie the user actually liked\n",
-        "    print(\"\\ncHR (Cumulative Hit Rate, rating >= 4): \", \n",
-        "          RecommenderMetrics.cumulative_hit_rate(top_n_preds, loo_validation_set, 4.0))\n",
-        "\n",
+        "    # Calculate top n recommendations for each user\n",
+        "    n=10\n",
+        "    top_n_predictions = RecommenderMetrics.get_top_n(all_predictions, n=n)\n",
+        "    \n",
+        "    # How often we recommended a movie the user actually rated\n",
+        "    hit_rate = RecommenderMetrics.hit_rate(top_n_predictions, loo_predictions)\n",
+        "    # Hit Rate by rating value\n",
+        "    rating_hit_rate = RecommenderMetrics.rating_hit_rate(top_n_predictions, loo_predictions)\n",
+        "    # How often we recommended a movie the user actually liked\n",
+        "    cumulative_hit_rate = RecommenderMetrics.cumulative_hit_rate(top_n_predictions, loo_predictions, 4.0)\n",
         "    # Compute ARHR\n",
-        "    print(\"\\nARHR (Average Reciprocal Hit Rank): \", \n",
-        "          RecommenderMetrics.average_reciprocal_hit_rank(top_n_preds, loo_validation_set))"
+        "    arhr = RecommenderMetrics.average_reciprocal_hit_rank(top_n_predictions, loo_predictions)\n",
+        "    \n",
+        "    print(f\"Hit Rate: {hit_rate:.5f}\")\n",
+        "    print(\"rHR (Hit Rate by rating value):\")\n",
+        "    for rating, rate in rating_hit_rate:\n",
+        "        print(f\"\\t{rating}: {rate:.5f}\")\n",
+        "    print(f\"cHR (Cumulative Hit Rate, rating >= 4): {cumulative_hit_rate:.5f}\")\n",
+        "    print(f\"ARHR (Average Reciprocal Hit Rank): {arhr:.5f}\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Evaluate Complete Recommendations"
+        "### Evaluate Complete Recommendations"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "User coverage, rating >= 4.0: 0.95529\n",
+            "Diversity: 0.96652\n",
+            "Novelty (average popularity rank): 491.57678\n"
+          ]
+        }
+      ],
       "source": [
         "algo.fit(full_train_set)\n",
         "anti_test_set = full_train_set.build_anti_testset()\n",
-        "all_preds = algo.test(anti_test_set)\n",
-        "top_n_preds = RecommenderMetrics.get_top_n(all_preds, n=10)\n",
+        "all_predictions = algo.test(anti_test_set)\n",
+        "top_n_predictions = RecommenderMetrics.get_top_n(all_predictions, n=10)\n",
         "\n",
-        "# Print user coverage with a minimum predicted rating of 4.0:\n",
-        "print(\"User coverage: \", RecommenderMetrics.user_coverage(top_n_preds, full_train_set.n_users, rating_threshold=4.0))\n",
+        "minimum_rating = 4.0\n",
         "\n",
-        "# Measure diversity of recommendations:\n",
-        "print(\"\\nDiversity: \", RecommenderMetrics.diversity(top_n_preds, similarities_model))\n",
+        "user_coverage = RecommenderMetrics.user_coverage(\n",
+        "    top_n_predictions, full_train_set.n_users, minimum_rating=minimum_rating\n",
+        ")\n",
+        "diversity = RecommenderMetrics.diversity(top_n_predictions, similarities_model)\n",
+        "novelty = RecommenderMetrics.novelty(top_n_predictions, rankings)\n",
         "\n",
-        "# Measure novelty (average popularity rank of recommendations):\n",
-        "print(\"\\nNovelty (average popularity rank): \", RecommenderMetrics.novelty(top_n_preds, rankings))"
+        "print(f\"User coverage, rating >= {minimum_rating}: {user_coverage:.5f}\")\n",
+        "print(f\"Diversity: {diversity:.5f}\")\n",
+        "print(f\"Novelty (average popularity rank): {novelty:.5f}\")"
       ]
     }
   ],
