--- a/notebooks/05-ContentBased/ContentRecs.ipynb
+++ b/notebooks/05-ContentBased/ContentRecs.ipynb
@@ -103,11 +103,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Evaluate algorithms\n",
-        "evaluator.evaluate(False)\n",
+        "results = evaluator.evaluate(True)\n",
         "\n",
-        "# Show sample recommendations\n",
-        "evaluator.sample_top_n_recs(ml)"
+        "results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples"
       ]
     }
   ],
