--- a/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
@@ -12,7 +12,7 @@
         "1. Loading the MovieLens dataset\n",
         "2. Setting up leave-one-out cross-validation\n",
         "3. Training a user-based KNN model\n",
-        "4. Computing recommendations for each user\n",
+        "4. Generate recommendations for each user\n",
         "5. Measuring the hit rate on the test set"
       ]
     },
