--- a/notebooks/06-CollaborativeFiltering/KNNBakeOff.ipynb
+++ b/notebooks/06-CollaborativeFiltering/KNNBakeOff.ipynb
@@ -100,8 +100,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Run the evaluation\n",
-        "evaluator.evaluate(False)"
+        "results = evaluator.evaluate(True)\n",
+        "results"
       ]
     },
     {
@@ -119,8 +119,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Generate and display sample recommendations\n",
-        "evaluator.sample_top_n_recs(ml)"
+        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples"
       ]
     }
   ],
