--- a/notebooks/07-MatrixFactorization/SVDTuning.ipynb
+++ b/notebooks/07-MatrixFactorization/SVDTuning.ipynb
@@ -116,11 +116,12 @@
         "params = gs.best_params['rmse']\n",
         "SVDtuned = SVD(n_epochs=params['n_epochs'], \n",
         "               lr_all=params['lr_all'], \n",
-        "               n_factors=params['n_factors'])\n",
+        "               n_factors=params['n_factors'],\n",
+        "               verbose=False)\n",
         "evaluator.add_algorithm(SVDtuned, \"SVD - Tuned\")\n",
         "\n",
         "# Add untuned SVD\n",
-        "SVDUntuned = SVD()\n",
+        "SVDUntuned = SVD(verbose=False)\n",
         "evaluator.add_algorithm(SVDUntuned, \"SVD - Untuned\")\n",
         "\n",
         "# Add random recommendations as baseline\n",
@@ -143,7 +144,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.evaluate(False)"
+        "results = evaluator.evaluate(True)\n",
+        "results"
       ]
     },
     {
@@ -161,7 +163,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.sample_top_n_recs(ml)"
+        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples"
       ]
     }
   ],
