--- a/notebooks/09-DeepLearning/AutoRecBakeOff.ipynb
+++ b/notebooks/09-DeepLearning/AutoRecBakeOff.ipynb
@@ -115,7 +115,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.evaluate(True, minimum_rating=0.0)"
+        "results = evaluator.evaluate(True, minimum_rating=0.0)\n",
+        "results"
       ]
     },
     {
@@ -133,7 +134,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.sample_top_n_recs(ml)"
+        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples"
       ]
     }
   ],
