--- a/notebooks/09-DeepLearning/RBMTuning.ipynb
+++ b/notebooks/09-DeepLearning/RBMTuning.ipynb
@@ -142,7 +142,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.evaluate(False)"
+        "results = evaluator.evaluate(True)\n",
+        "results"
       ]
     },
     {
@@ -160,7 +161,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.sample_top_n_recs(ml)"
+        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples"
       ]
     }
   ],
