--- a/notebooks/13-Hybrid/HybridTest.ipynb
+++ b/notebooks/13-Hybrid/HybridTest.ipynb
@@ -136,7 +136,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.evaluate(False)"
+        "results = evaluator.evaluate(False)\n",
+        "results"
       ]
     },
     {
@@ -154,7 +155,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.sample_top_n_recs(ml)"
+        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples"
       ]
     }
   ],
