--- a/notebooks/01-GettingStarted/GettingStarted.ipynb
+++ b/notebooks/01-GettingStarted/GettingStarted.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -39,9 +39,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "User 85 loved these movies:\n",
+            "Jumanji (1995) 5.0\n",
+            "GoldenEye (1995) 5.0\n",
+            "Braveheart (1995) 5.0\n",
+            "Jerky Boys, The (1995) 5.0\n",
+            "LÃ©on: The Professional (a.k.a. The Professional) (LÃ©on) (1994) 5.0\n",
+            "Pulp Fiction (1994) 5.0\n",
+            "Stargate (1994) 5.0\n",
+            "Shawshank Redemption, The (1994) 5.0\n",
+            "Star Trek: Generations (1994) 5.0\n",
+            "Clear and Present Danger (1994) 5.0\n",
+            "\n",
+            "...and hated these movies:\n",
+            "Postman, The (Postino, Il) (1994) 1.0\n",
+            "Casper (1995) 1.0\n",
+            "Mighty Morphin Power Rangers: The Movie (1995) 1.0\n",
+            "Prophecy, The (1995) 1.0\n",
+            "Heavenly Creatures (1994) 1.0\n",
+            "Little Women (1994) 1.0\n",
+            "Nell (1994) 1.0\n",
+            "Poison Ivy II (1996) 1.0\n",
+            "Tank Girl (1995) 1.0\n",
+            "While You Were Sleeping (1995) 1.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Pick an arbitrary test subject\n",
         "test_subject = 85\n",
@@ -57,57 +87,88 @@
         "    if (float(ratings[1]) < 3.0):\n",
         "        hated.append(ratings)\n",
         "\n",
-        "print(\"\\nUser \", test_subject, \" loved these movies:\")\n",
-        "for ratings in loved:\n",
-        "    print(lens.get_movie_name(ratings[0]))\n",
-        "print(\"\\n...and didn't like these movies:\")\n",
-        "for ratings in hated:\n",
-        "    print(lens.get_movie_name(ratings[0]))"
+        "loved.sort(key=lambda x: x[1], reverse=True)\n",
+        "hated.sort(key=lambda x: x[1])\n",
+        "\n",
+        "print(f\"User {test_subject} loved these movies:\")\n",
+        "for ratings in loved[:10]:\n",
+        "    print(lens.get_movie_name(ratings[0]), ratings[1])\n",
+        "print(\"\\n...and hated these movies:\")\n",
+        "for ratings in hated[:10]:\n",
+        "    print(lens.get_movie_name(ratings[0]), ratings[1])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x107a477a0>"
+            ]
+          },
+          "execution_count": 49,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Building recommendation model\n",
         "train_set = data.build_full_trainset()\n",
         "\n",
-        "algo = SVD()\n",
+        "algo = SVD(verbose=False)\n",
         "algo.fit(train_set)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "We recommend:\n",
+            "\n",
+            "Godfather, The (1972) 4.6\n",
+            "Happiness (1998) 4.4\n",
+            "Star Wars: Episode V - The Empire Strikes Back (1980) 4.4\n",
+            "Producers, The (1968) 4.4\n",
+            "Wallace & Gromit: The Best of Aardman Animation (1996) 4.4\n",
+            "Reservoir Dogs (1992) 4.4\n",
+            "It Happened One Night (1934) 4.4\n",
+            "Crimes and Misdemeanors (1989) 4.4\n",
+            "Departed, The (2006) 4.4\n",
+            "Cube (1997) 4.3\n"
+          ]
+        }
+      ],
       "source": [
-        "# Computing recommendations\n",
+        "# Generate recommendations\n",
         "test_set = create_anti_test_set(test_subject, train_set)\n",
         "predictions = algo.test(test_set)\n",
         "\n",
         "recommendations = []\n",
         "\n",
-        "print(\"Loading movie ratings...\")\n",
         "data = lens.load_movielens_data()\n",
         "\n",
-        "print (\"\\nWe recommend:\")\n",
+        "print (\"We recommend:\\n\")\n",
         "for user_id, movie_id, true_rating, predicted_rating, _ in predictions:\n",
-        "    intMovieID = int(movie_id)\n",
-        "    recommendations.append((intMovieID, predicted_rating))\n",
+        "    recommendations.append((int(movie_id), predicted_rating))\n",
         "\n",
         "recommendations.sort(key=lambda x: x[1], reverse=True)\n",
         "\n",
         "for ratings in recommendations[:10]:\n",
-        "    print(lens.get_movie_name(ratings[0]))"
+        "    print(lens.get_movie_name(ratings[0]), f\"{ratings[1]:.1f}\")"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "RecSys",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -121,7 +182,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
