--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +35,8 @@
     "from recsys.Evaluator import Evaluator\n",
     "\n",
     "import random\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -37,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(_, evaluation_dataset, rankings) = MovieLens.load(verbose=True)\n",
+    "(_, evaluation_dataset, rankings) = MovieLens.load()\n",
     "\n",
-    "evaluator = Evaluator(evaluation_dataset, rankings, verbose=True)"
+    "evaluator = Evaluator(evaluation_dataset, rankings)"
    ]
   },
   {
@@ -74,11 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "svd_model = SVD(random_state=10)\n",
+    "svd_model = SVD(random_state=10, verbose=False)\n",
     "evaluator.add_algorithm(svd_model, \"SVD\")\n",
     "\n",
     "random_model = NormalPredictor()\n",
@@ -111,7 +122,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluator.evaluate(True)"
+    "columns, values = evaluator.evaluate(top_n_metrics=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_df = pd.DataFrame(values, columns=columns).set_index(\"Algorithm\")\n",
+    "results_df"
    ]
   }
  ],
