--- a/notebooks/07-MatrixFactorization/SVDBakeOff.ipynb
+++ b/notebooks/07-MatrixFactorization/SVDBakeOff.ipynb
@@ -90,7 +90,7 @@
       "outputs": [],
       "source": [
         "# SVD\n",
-        "SVD = SVD()\n",
+        "SVD = SVD(verbose=False)\n",
         "evaluator.add_algorithm(SVD, \"SVD\")\n",
         "\n",
         "# SVD++\n",
@@ -117,7 +117,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.evaluate(False)"
+        "results = evaluator.evaluate(False)\n",
+        "results"
       ]
     },
     {
@@ -135,7 +136,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.sample_top_n_recs(ml)"
+        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples"
       ]
     }
   ],
