--- a/notebooks/11-Challenges/RBMBakeOff.ipynb
+++ b/notebooks/11-Challenges/RBMBakeOff.ipynb
@@ -115,7 +115,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.evaluate(False)"
+        "results = evaluator.evaluate(False)\n",
+        "results"
       ]
     },
     {
@@ -133,8 +134,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Uncomment to see sample recommendations\n",
-        "# evaluator.sample_top_n_recs(ml)"
+        "samples = evaluator.sample_top_n_recs(ml)\n",
+        "samples"
       ]
     }
   ],
