--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,21 +127,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns, values = evaluator.evaluate(top_n_metrics=True)"
+    "algorithms, metrics, values = evaluator.evaluate(top_n_metrics=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluation results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>cHR</th>\n",
+       "      <th>ARHR</th>\n",
+       "      <th>Coverage</th>\n",
+       "      <th>Diversity</th>\n",
+       "      <th>Novelty</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Algorithm</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SVD</th>\n",
+       "      <td>0.903370</td>\n",
+       "      <td>0.697788</td>\n",
+       "      <td>0.031297</td>\n",
+       "      <td>0.031297</td>\n",
+       "      <td>0.011369</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.046182</td>\n",
+       "      <td>499.795529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random</th>\n",
+       "      <td>1.438459</td>\n",
+       "      <td>1.147809</td>\n",
+       "      <td>0.008942</td>\n",
+       "      <td>0.008942</td>\n",
+       "      <td>0.001505</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.071946</td>\n",
+       "      <td>557.836513</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               RMSE       MAE        HR       cHR      ARHR  Coverage  \\\n",
+       "Algorithm                                                               \n",
+       "SVD        0.903370  0.697788  0.031297  0.031297  0.011369       1.0   \n",
+       "Random     1.438459  1.147809  0.008942  0.008942  0.001505       1.0   \n",
+       "\n",
+       "           Diversity     Novelty  \n",
+       "Algorithm                         \n",
+       "SVD         0.046182  499.795529  \n",
+       "Random      0.071946  557.836513  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "results_df = pd.DataFrame(values, columns=columns).set_index(\"Algorithm\")\n",
-    "results_df"
+    "results_df = pd.DataFrame(\n",
+    "    values, columns=metrics, index=pd.Index(algorithms, name=\"Algorithm\")\n",
+    ")\n",
+    "results_df\n"
    ]
   }
  ],
